[gd_scene load_steps=14 format=3 uid="uid://bsowj3advpjh2"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_a0stm"]
[ext_resource type="Texture2D" uid="uid://dir57ksjughti" path="res://resources/Sleepy.png" id="2_udpjo"]
[ext_resource type="Texture2D" uid="uid://bso8f1tnjfbwv" path="res://resources/Awake.png" id="3_h4o2k"]
[ext_resource type="Texture2D" uid="uid://dyqp83vbeduyb" path="res://resources/Sleeping.png" id="4_ff38j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8nmhw"]
radius = 25.02

[sub_resource type="AtlasTexture" id="AtlasTexture_4trxe"]
atlas = ExtResource("2_udpjo")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqx1c"]
atlas = ExtResource("3_h4o2k")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_oaya3"]
atlas = ExtResource("4_ff38j")
region = Rect2(0, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_p6wx0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4trxe")
}],
"loop": true,
"name": &"after_awake",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqx1c")
}],
"loop": true,
"name": &"awake",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oaya3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vn8p0"]
radius = 25.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kr1fb"]
bg_color = Color(0, 0.675293, 0.760387, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s8swm"]
bg_color = Color(0.788134, 3.36915e-06, 0.478981, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 12

[sub_resource type="Gradient" id="Gradient_458o3"]
offsets = PackedFloat32Array(0, 0.758333)
colors = PackedColorArray(1, 1, 1, 1, 0.498273, 4.01892e-06, 0.22961, 1)

[node name="Player" type="CharacterBody2D"]
position = Vector2(187, 79)
script = ExtResource("1_a0stm")
metadata/_edit_group_ = true

[node name="BeChecked" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8nmhw")

[node name="Ani" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_p6wx0")

[node name="Area2Check" type="Area2D" parent="."]

[node name="ToCheck" type="CollisionShape2D" parent="Area2Check"]
shape = SubResource("CircleShape2D_vn8p0")

[node name="Hp_Bar" type="ProgressBar" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.0
offset_top = -33.0
offset_right = 33.0
offset_bottom = -26.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_kr1fb")
theme_override_styles/fill = SubResource("StyleBoxFlat_s8swm")
value = 50.0
show_percentage = false

[node name="Shooter" type="Line2D" parent="."]
unique_name_in_owner = true
visible = false
points = PackedVector2Array(0, 0)
gradient = SubResource("Gradient_458o3")
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 12

[connection signal="mouse_entered" from="Area2Check" to="." method="_on_area_2_check_mouse_entered"]
[connection signal="mouse_exited" from="Area2Check" to="." method="_on_area_2_check_mouse_exited"]
